More booking changes

--- a/MDSD Pet Hotel/plugin.xml
+++ b/MDSD Pet Hotel/plugin.xml
@@ -41,4 +41,11 @@
             class="Classes.mdsdAccount.MdsdAccountPackage"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated Classes -->
+      <package
+            uri="http://www.eclipse.org/uml2/5.0.0/Types"
+            class="org.eclipse.uml2.types.TypesPackage"/>
+   </extension>
+
 </plugin>
